--- a/_publications/2017-ELSA.md
+++ b/_publications/2017-ELSA.md
@@ -5,7 +5,7 @@ permalink: /publication/2017-ELSA
 date: 2017
 venue: 'American Journal of Hypertension'
 paperurl: 'https://doi.org/10.1093/ajh/hpx076'
-citation: 'Your Name, You. (2009). &quot;Association between short-term systolic blood pressure variability and carotid intima-media thickness in ELSA-Brasil baseline.&quot; <i>Journal 1</i>. 1(1).'
+citation: 'Ribeiro, A. H., Lotufo, P. A., Fujita, A., Goulart, A. C., Chor, D., Mill, J. G., Bensenor, I. M., andSantos, I. S. (2017). Association between short-term systolic blood pressure variability and carotid intima-media thickness in ELSA-Brasil baseline. <i>American Journal of Hypertension</i>, 30:954–960.'
 ---
 This is a work in collaboration with researchers of the Center for Clinical and Epidemiologic Research of the University Hospital of Sao Paulo. We used partial least square path analysis to investigate the association between short-term systolic blood pressure variability and carotid intima-media thickness, a non-invasive marker for early subclinical atherosclerosis, in the baseline of the large Brazilian cohort ELSA-Brasil. 
 
